Issue #1941012 by OnkelTem: Fixed stretched thumbnails.

--- a/manualcrop.css
+++ b/manualcrop.css
@@ -166,7 +166,7 @@
 .manualcrop-style-thumb .manualcrop-preview img {
   margin: 0px;
   max-width: 100px;
-  max-height: 100px;
+  height: auto;
 }
 .manualcrop-style-thumb .manualcrop-preview-cropped img {
   max-width: none;
